# duix.ai

./: LICENSE  README.md
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/: Android.mk64  CMakeLists.txt  makefile
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/aes/: aes.h  aes_cbc.c  aes_core.c  aes_ecb.c  aes_locl.h  aesmain.c  aesmain.h  base64.c  base64.h  cbc128.c  gaes_stream.cc  gaes_stream.h  gaesmain  gj_aes.c  gj_aes.h  gj_dll.h  makefile  modes.h
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/aisdk/: aicommon.h  aimodel.cpp  aimodel.h  blendgram.cpp  blendgram.h  bt  face_utils.cpp  face_utils.h  jlog.h  jmat.cpp  jmat.h  malpha.cpp  malpha.h  munet.cpp  munet.h  netwav.cpp  netwav.h  pfpld.cpp  pfpld.h  scrfd.cpp  scrfd.h  wavcache.cpp  wavcache.h  wavreader.cpp  wenet.cpp  wenet.h
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/aisdk/mfcc/: AudioFFT.hpp  iir_filter.hpp  mfcc.hpp  sas_util.h
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/android/: AudioTrackJni.cpp  AudioTrackJni.h  DigitJni.cpp  JniHelper.cpp  JniHelper.h  MsgcbJni.cpp  MsgcbJni.h  kmatarm.cpp  ndkvid.cpp  ndkvid.h  ndkwin.cpp  ndkwin.h  scrfdncnn.cpp  scrfdncnn.h
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/base/: AudioTrack.cpp  AudioTrack.h  BaseRenderHelper.cpp  BaseRenderHelper.h  CommObj.h  ConcurrentQueue.h  FrameSource.cpp  FrameSource.h  Log.cpp  Log.h  LoopThread.cpp  LoopThread.h  LoopThreadHelper.cpp  LoopThreadHelper.h  MediaData.cpp  MediaData.h  MessageHelper.cpp  MessageHelper.h  MessageSource.cpp  MessageSource.h  XThread.cpp  XThread.h  XTick.c  XTick.h  cJSON.c  cJSON.h  coffeecatch.c  dh_atomic.h  dh_mem.c  dh_mem.h  dh_types.h  grefmem.h
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/cuda/: kmatcuda.cpp
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/digit/: GDigit.cpp  GDigit.h  GRender.cpp  GRender.h  dispatchqueue.cpp  dispatchqueue.hpp  grtcfg.c  grtcfg.h  looper.cpp  looper.h  netcurl.cpp  netcurl.h  netwav.cpp  netwav.h
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/include/: kmat.h  librosa.h
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/include/NumCpp/: Coordinates.hpp  Core.hpp  Filter.hpp  Functions.hpp  ImageProcessing.hpp  Integrate.hpp  Linalg.hpp  NdArray.hpp  Polynomial.hpp  PythonInterface.hpp  Roots.hpp  Rotations.hpp  Special.hpp  Vector.hpp
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/include/NumCpp/Coordinates/: Cartesian.hpp  Euler.hpp  Orientation.hpp
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/include/NumCpp/Core/: Constants.hpp  DataCube.hpp  DtypeInfo.hpp  Shape.hpp  Slice.hpp  Timer.hpp  Types.hpp
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/include/NumCpp/DateTime/: Clock.hpp  DateTime.hpp
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/include/NumCpp/Functions/: wrap.hpp  wrap2Pi.hpp
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/include/NumCpp/ImageProcessing/: Centroid.hpp  Cluster.hpp  ClusterMaker.hpp  Pixel.hpp  applyThreshold.hpp  centroidClusters.hpp  clusterPixels.hpp  generateCentroids.hpp  generateThreshold.hpp  windowExceedances.hpp
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/include/NumCpp/Linalg/: cholesky.hpp  det.hpp  gaussNewtonNlls.hpp  hat.hpp  inv.hpp  lstsq.hpp  lu_decomposition.hpp  matrix_power.hpp  multi_dot.hpp  pinv.hpp  pivotLU_decomposition.hpp  solve.hpp  svd.hpp
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/include/NumCpp/Logging/: BinaryLogger.hpp
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/include/NumCpp/NdArray/: NdArrayCore.hpp  NdArrayIterators.hpp  NdArrayOperators.hpp
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/include/NumCpp/Polynomial/: Poly1d.hpp
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/include/NumCpp/PythonInterface/: BoostInterface.hpp  BoostNumpyNdarrayHelper.hpp  PybindInterface.hpp
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/include/NumCpp/Random/: RNG.hpp  bernoulli.hpp  beta.hpp  binomial.hpp  cauchy.hpp  chiSquare.hpp  choice.hpp  discrete.hpp  (+24 more)
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/ios/: bt  gjdigit.cpp  gjdigit.h  iostest.cpp
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/linux/: gjgpgmain  gpgmain.cpp  linuxtest.cpp  makefile
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/mk/: Android.mk64  android.sh  bt  exbuildso64
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/render/: Android.mk64  AudioRenderer.cpp  AudioRenderer.h  EglRenderer.cpp  EglRenderer.h  GlesProgram.cpp  GlesProgram.h  RenderHelper.cpp  RenderHelper.h  RgbVideoRenderer.cpp  RgbVideoRenderer.h  SurfaceVideoRenderer.cpp  SurfaceVideoRenderer.h  VideoRenderer.h  bt
duix-android/dh_aigc_android/duix-sdk/src/main/cpp/src/: dhmain.cpp  kmatx86.cpp
(+200 files in other folders)
